--- a/data/nodes/nix_sdp.yaml
+++ b/data/nodes/nix_sdp.yaml
@@ -1,3 +1,9 @@
 ---
   classes:
     - git_version
+    - git
+  
+  git::configs:
+    user.name: 'Costa Argiris'
+    user.email: 'co.argiris@gmail.com'
+    core.editor: 'vim'
