Added eyaml and yaml data for mysql dbs

--- a/data/nodes/nix_sdp.yaml
+++ b/data/nodes/nix_sdp.yaml
@@ -44,3 +44,35 @@
         - Indexes
         - FollowSymLinks
         - MultiViews
+  
+  profile::mysql::mysql_dbs:
+    mydb_0:
+      user: test
+      host: localhost
+      grant:
+        - SELECT
+        - UPDATE
+    mydb_1:
+      user: test
+      host: localhost
+      grant:
+        - SELECT
+        - UPDATE
+    mydb_2:
+      user: test
+      host: localhost
+      grant:
+        - SELECT
+        - UPDATE
+    mydb_3:
+      user: test
+      host: localhost
+      grant:
+        - SELECT
+        - UPDATE
+    mydb_4:
+      user: test
+      host: localhost
+      grant:
+        - SELECT
+        - UPDATE
