--- a/data/nodes/nix_sdp.yaml
+++ b/data/nodes/nix_sdp.yaml
@@ -2,6 +2,8 @@
   classes:
     - git_version
     - git
+    - role::webserver
+    - role::database
   
   git::configs:
     user.name: 'Costa Argiris'
