--- a/hiera.yaml
+++ b/hiera.yaml
@@ -5,10 +5,9 @@ version: 5
 defaults:  # Used for any hierarchy level that omits these keys.
   datadir: data  # This path is relative to the environment -- development/data
   data_hash: yaml_data  # Use the built-in YAML backend.
-
-backends:
-  - eyaml
-  - yaml
+  options:
+    pkcs7_private_key: /etc/puppetlabs/puppet/eyaml/private_key.pkcs7.pem
+    pkcs7_public_key: /etc/puppetlabs/puppet/eyaml/public_key.pkcs7.pem
 
 hierarchy:
   - name: "Per-node data"                   # Human-readable name.
