--- a/data/nodes/nix_sdp.yaml
+++ b/data/nodes/nix_sdp.yaml
@@ -11,37 +11,37 @@
     core.editor: 'vim'
 
   profile::apache::vhosts:
-    example0.nix_sdp:
+    example0.nixsdp:
       port: 80
-      docroot: /var/www/example0.nix_sdp
+      docroot: /var/www/example0.nixsdp
       options:
         - Indexes
         - FollowSymLinks
         - MultiViews
-    example1.nix_sdp:
+    example1.nixsdp:
       port: 81
-      docroot: /var/www/example1.nix_sdp
+      docroot: /var/www/example1.nixsdp
       options:
         - Indexes
         - FollowSymLinks
         - MultiViews
-    example2.nix_sdp:
-      port: 82
-      docroot: /var/www/example2.nix_sdp
+    example2.nixsdp:
+      port: 8008
+      docroot: /var/www/example2.nixsdp
       options:
         - Indexes
         - FollowSymLinks
         - MultiViews
-    example3.nix_sdp:
-      port: 83
-      docroot: /var/www/example3.nix_sdp
+    example3.nixsdp:
+      port: 8009
+      docroot: /var/www/example3.nixsdp
       options:
         - Indexes
         - FollowSymLinks
         - MultiViews
-    example4.nix_sdp:
-      port: 84
-      docroot: /var/www/example4.nix_sdp
+    example4.nixsdp:
+      port: 9000
+      docroot: /var/www/example4.nixsdp
       options:
         - Indexes
         - FollowSymLinks
